<resources>
    <string name="app_name">MyPasswordManager</string>

    <string name="submit">add</string>
    <string name="include_numbers"> Numbers</string>
    <string name="include_uppercase"> Uppercase</string>
    <string name="include_special_characters"> Special Characters</string>
    <string name="include_letters"> Letters</string>

    <string name="enter_master_password">Enter master password</string>
    <string name="authorization_button">Enter</string>
    <string name="password_prompt_first_time_set">Set a master password for all account passwords</string>
    <string name="authorization_button_first_time_set">save</string>
    <string name="invalid_password_text">Invalid password</string>
    <string name="password_creation_mode_prompt">Select password mode</string>
    <string name="password_label_input">Password label</string>
    <string name="website_input">Website</string>
    <string name="password">Password</string>
    <string name="password_length_input">Password length</string>
    <string name="include_textview">Include</string>
    <string name="save_button">save</string>
    <string name="edit_password">edit</string>
    <string name="delete_password">delete</string>
    <string name="breach_notification_title">Account vulnerability detected</string>
    <string name="breach_notification_short_text">Please update your password to ensure your security.</string>
    <string name="breach_channel_name">Breach detection channel</string>
    <string name="channel_description">Notifies you when a data breach on an account you have is detected</string>
</resources>