<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationActivity">

    <TextView
        android:id="@+id/passwordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="@string/enter_master_password"
        app:layout_constraintBottom_toTopOf="@+id/passwordEdittext"
        app:layout_constraintStart_toStartOf="@+id/passwordEdittext" />

    <EditText
        android:id="@+id/passwordEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="master password" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_password_text"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/passwordEdittext"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

    <Button
        android:id="@+id/authorizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/authorization_button"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdittext"
        app:layout_constraintStart_toStartOf="@+id/passwordEdittext"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

</androidx.constraintlayout.widget.ConstraintLayout>